--- a/creas.html
+++ b/creas.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="creas.css">
     <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-firestore.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-auth.js"></script>
 </head>
 <body>
 
@@ -154,3 +155,4 @@
 <script src="creas.js"></script>
 </body>
 </html>
+
